cmake_minimum_required(VERSION 3.16)
project(http_server CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB_RECURSE SOURCES "src/*.cpp")
add_executable(http_server ${SOURCES})
target_include_directories(http_server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
find_package(Threads REQUIRED)
target_link_libraries(http_server PRIVATE Threads::Threads)
